:art::fire: Refactor and rename

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,11 @@
 
   <body class="full-vertical">
     <div class="row align-top medium-unstack expanded content-body">
-      <div id="menu_app"></div>
+      <div id="side_menu_app"></div>
       <div class="columns">
         <%= yield %>
       </div>
     </div>
-    <div id="footer_app" class="row medium-unstack align-bottom expanded content-footer">
-      Footer
-    </div>
+    <div id="footer_app"></div>
   </body>
 </html>
