refactor to use flex

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -11,3 +11,6 @@ body {
 @import 'square_box';
 @import 'triangle_box';
 @import 'projects';
+@import 'footer';
+@import 'side_menu';
+@import 'pieces_app';
