--- a/app/javascript/styles/circle_box.scss
+++ b/app/javascript/styles/circle_box.scss
@@ -1,8 +1,7 @@
 .circleIcon {
   display: inline;
   float: left;
-  margin-right: 5px;
-  margin-bottom: 10px;
+  margin: 1em 1em;;
 }
 .circleIcon:hover, .svg-hover {
   circle {
@@ -12,8 +11,8 @@
 
 .link--circleBox {
   float: left;
-  display: inline;
   white-space: nowrap;
   text-align: left;
-  padding-left: 0.5em;
+  width: 100px;
+  height: 1em;
 }
